[gd_scene load_steps=5 format=2]

[ext_resource path="res://Asset/Video/Intro-5.0.ogv" type="VideoStream" id=1]
[ext_resource path="res://Objects/IntroVideo.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Finish"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VideoPlayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VideoPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1280, 720 )

[node name="IntroVideo" type="Node"]
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="CenterContainer"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
stream = ExtResource( 1 )
autoplay = true
buffering_msec = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="CenterContainer"]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CenterContainer/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Finish = SubResource( 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
[connection signal="finished" from="CenterContainer/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
